--- a/cli/package.json
+++ b/cli/package.json
@@ -17,13 +17,13 @@
     "templates"
   ],
   "dependencies": {
+    "@mekstuff/docdocs-front-end": "workspace:*",
     "@mekstuff/logreport": "file:.lpm\\@mekstuff\\logreport@1.0.0--7cfe09b622-da4ef6",
     "boxen": "^7.1.1",
     "chokidar": "^3.5.3",
     "commander": "^10.0.1",
     "pluralize": "^8.0.0",
-    "typedoc": "^0.25.2",
-    "@mekstuff/docdocs-front-end": "workspace:*"
+    "typedoc": "^0.25.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
@@ -34,6 +34,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8",
+    "tree-kill": "^1.2.2",
     "typescript": "^5.1.3",
     "vitepress": "^1.0.0-rc.22"
   },
